# emevo

./: .flake8  .gitignore  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  requirements.txt  setup-jupterlab  setup-venv  setup.cfg  setup.py
.github/workflows/: tests.yml
benches/: test_step.py
config/: 20230530-a035-e020.toml
config/bd/: 20230530-a035-e020.toml  20231222-a035-e020-ab001.toml  20231227-a035-e010.toml  20240105-a2b4.toml  20240105-a4b2.toml  20240107-a2b2.toml  20240126-mild.toml  20240129-mild2.toml  20240318-mild-slope.toml  20240403-predator-d50.toml  20240821-sel-const-03.toml  20240821-sel-const-04.toml  20240821-sel-const.toml  20240821-slope-04.toml  20240822-sel-const035.toml  20240822-slope-05.toml  20240827-s4-delay.toml  20240913-selg-a16-d1.toml  20240916-sel-a4e7-d15.toml  20240925-sel-a1e6-d10.toml  20241225-d10.toml  20241225-predator-d40.toml  20241229-predator-d100.toml  20241229-predator-d60.toml  20250108-d15.toml  20250726-elg-sodium.toml  20250731-elg-sodium05.toml  20251001-a4b2-d10.toml  20260327-predator-a4b2-d100.toml
config/env/: 20231214-square.toml  20231226-big-square.toml  20231227-big-obstacle.toml  20240105-big-160.toml  20240109-circle-2seasons.toml  20240109-circle.toml  20240109-isolation.toml  20240109-two-seasons.toml  20240110-2seasons-100.toml  20240110-2seasons-1000.toml  20240110-less-foods.toml  20240111-iso-scheduled.toml  20240111-square-150.toml  20240115-2seasons-150.toml  20240115-iso-150.toml  20240115-uniform-150.toml  20240116-2s-150-interval100.toml  20240116-food-cycle-1.toml  20240116-food-cycle-2.toml  20240118-square-150-60.toml  20240118-uniform-150-60.toml  20240119-seasons-gradual.toml  20240121-seasons-lessfoods.toml  20240126-square-f80.toml  20240129-seasons-f80.toml  20240130-seasons-tri.toml  20240131-seasons-i200.toml  20240206-multi.toml  20240210-square-smallbody.toml  20240214-seasons-noprepare.toml  20240214-seasons-tri-i1000.toml  20240214-stress.toml  20240216-4seasons.toml  20240216-constant.toml  20240216-poison.toml  20240217-4seasons-easy.toml  20240217-const-large.toml  20240220-const-cycle.toml  20240220-largevar.toml  20240223-largevar-cent.toml  (+117 more)
config/gops/: 20231220-mutation-01.toml  20231231-mutation-0401.toml  20240111-mutation-0401.toml  20240112-mutation-0401-clipped.toml  20240113-mutation-0404-clipped.toml  20240115-mutation-02005-clipped.toml  20240115-mutation-0201-clipped.toml  20240222-mutation-0402-clipped.toml  20240224-0401-clipped-delay40.toml  20240305-0401-clipped-delay60.toml  20240306-mutation-0401-clipped-delay3216.toml  20240318-cauchy.toml  20240323-cauchy-clipped.toml  20240324-cauchy-001.toml  20240325-cauthy-001-clip10.toml  20240326-cauthy-002.toml  20240916-cauthy-01.toml  20241006-mutation-normal-01.toml  20241007-mutation-bu-051.toml  20241007-mutation-normal-05.toml  20241010-mutation-t-2.toml  20250805-mutation-t2-clip100.toml  20260327-gaussian-clip100.toml
examples/: env_loop.py  forgaging_loop.py  waterworld_evolution_loop.py  waterworld_loop.py
experiments/: cf_asexual_evo.py  cf_noevo.py  cf_nolearn.py  cf_obstacle.py  cf_predator.py  cf_predator_smell.py  cf_simple.py  cf_sodium.py  cf_toxin.py  cfs_as_evo.py  cfsdiff_as_evo.py
notebooks/: bd_rate.ipynb  cauchy.ipynb  diffusion.ipynb  reward_fn.ipynb  toxin.ipynb  vis_birth_and_death_functions.ipynb
requirements/: bench.in  bench.txt  cuda11.in  cuda11_local.in  cuda12.in  cuda12_local.in  dev.txt  example.in  example.txt  experiments.in  format.txt  jupyter.in  lab.in  lab.txt  lint.in  lint.txt  scripts.in  self.txt  smoke.in  smoke.txt  smoketest.in  smoketest.txt  tests.in  tests.txt
scripts/: age.py  avg_energy_consumption.py  avgd.py  avgd_per_time.py  avgd_pp.py  birth_energy.py  check_death_place.py  check_last_step.py  check_obs_crash.py  compare_birth_models.py  convert_desrcndant_df.py  death_step.py  energy_balance.py  last_energy.py  make_web_data.py  min_qtgl.py  n_ate_foods.py  neighbor.py  obs_damage.py  obs_uid_per_time.py  obstacle_dist.py  pickup_traj.py  plot_bd_models.py  popl.py  pp_sensor.py  predartor_death_cause.py  predator_check_eaten.py  predator_dxy_dist.py  predator_dxy_sim.py  predator_following.py  predator_group.py  predator_popl.py  predator_reaction.py  predator_stats.py  predator_uid_per_time.py  xyrange.py
smoke-tests/: circle_asexual_repr.py  circle_loop.py  circle_ppo.py  circle_sexual_repr.py  circle_widget.py  foraging_asexual_repr.py  foraging_loop.py  foraging_sexual_repr.py  forgaging_loop.py
src/: agents.py  environments.py  main.py
src/emevo/: __init__.py  _test_utils.py  admin.py  agent.py  agents.py  api.py  birth_and_death.py  body.py  child.py  env.py  environment.py  environment_loop.py  environment_utils.py  eqx_utils.py  exp_utils.py  genetic_ops.py  manager.py  mating.py  plotting.py  qt_widget.py  reward_extractor.py  reward_fn.py  spaces.py  status.py  types.py  utils.py  vec2d.py  vis_utils.py  visualizer.py
src/emevo/analysis/: __init__.py  evaluate.py  log_plotting.py  mgl_widget.py  policy.py  qt_widget.py  tree.py  value.py
src/emevo/birth_and_death/: __init__.py  birth.py  birth_functions.py  core.py  death.py  death_functions.py  newborn.py  population.py  repr_functions.py  status.py  statuses.py  utils.py
src/emevo/environments/: __init__.py  cf_with_smell.py  circle_foraging.py  circle_foraging_with_neurotoxin.py  circle_foraging_with_obstacle.py  circle_foraging_with_predator.py  circle_foraging_with_sodium.py  env_utils.py  locating.py  moderngl_vis.py  phyjax2d.py  phyjax2d_utils.py  placement.py  qt_vis.py  (+4 more)
src/emevo_gym/: __init__.py  api.py  environment.py  environment_loop.py
src/roboevo/: __init__.py  config.py  main.py
tests/: test_activate.py  test_birth_and_death.py  test_circle.py  test_config.py  test_env_utils.py  test_foraging.py  test_manager.py  test_misc.py  test_observe.py  test_placement.py  test_ppo.py  test_reward_fn.py  test_smell.py  test_spaces.py  test_status.py  test_survival_prob.py  test_tree.py  test_waterworld.py
tests/assets/: profile_and_rewards.parquet
(+25 files in other folders)
