[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "setuptools-scm"]

[project]
name = "emevo"
authors = [{name = "Yuji Kanagawa", email = "yuji.kanagawa@oist.jp"}]
description = "A simulation platform for Embodied Evolution of learning agents"
license = {text = "Apache2"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Typing :: Typed",
]
requires-python = ">= 3.10"
dependencies = [
    "chex >= 0.1.82",
    "distrax >= 0.1",
    "equinox >= 0.11",
    "moderngl >= 5.6",
    "moderngl-window >= 2.4",
    "jax >= 0.4.25",
    "pyarrow >= 9.0",
    "pyserde[toml] >= 0.14",
    "optax >= 0.1",
    "phyjax2d >= 0.1",
]
dynamic = ["version"]

[project.optional-dependencies]
# pygraphviz >= 1.0 is also required to draw phylogenetic tree, but excluded here for Github CI
analysis = [
    "matplotlib >= 3.0",
    "networkx >= 3.0",
    "polars >= 0.20",
]
# Meta feature to install CUDA12 jax
cuda12 = ["jax[cuda12]"]
widget = ["PySide6 >= 6.5"]
video = ["imageio-ffmpeg >= 0.4"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/oist/emevo"
bug-tracker = "https://github.com/oist/emevo/issues"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "emevo.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
ignore = ["B905"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/emevo/reward_fn.py" = ["B023"]
# For typer
"experiments/*.py" = ["B008", "UP006", "UP007"]
"smoke-tests/*.py" = ["B008", "UP006", "UP007"]
"scripts/*.py" = ["UP006", "UP035", "UP007"]


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
