[metadata]
name = roboevo
version = attr: click.__version__
url = https://github.com/kngwyu/emevo
license = Apache2
license_files = LICENSE
author = Yuji Kanagawa
author_email = yuji.kanagawa@oist.jp
description = A simulation platform for Embodied Evolution
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

[options.packages.find]
where = src

[flake8]
max-line-length = 88
ignore = W391, W503, F821, E203, E231

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
lines_between_types=1
combine_as_imports=True