[metadata]
name = emevo
version = attr: emevo.__version__
url = https://github.com/kngwyu/emevo
license = Apache2
license_files = LICENSE
author = Yuji Kanagawa
author_email = yuji.kanagawa@oist.jp
description = A simulation platform for Embodied Evolution
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
install_requires =
    numpy >= 1.20

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::UserWarning

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions,
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
max-line-length = 88
ignore = W391, W503, F821, E203, E231
per-file-ignores =
    # __init__ module exports names
    src/emevo/__init__.py: F401

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
lines_between_types=1
combine_as_imports=True