[metadata]
name = emevo
version = attr: emevo.__version__
author = Yuji Kanagawa
author_email = yuji.kanagawa@oist.jp
description = A simulation platform for Embodied Evolution of learning agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kngwyu/emevo
project_urls =
    Bug Tracker = https://github.com/kngwyu/emevo/issues
license = Apache2
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Life
    Typing :: Typed

[options]
packages = find:
package_dir =
    = src
include_package_data = true
python_requires = >= 3.8
install_requires =
    loguru >= 0.6
    numpy >= 1.20
    pymunk >= 6.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::UserWarning

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions,
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
max-line-length = 88
ignore = W391, W503, F821, E203, E231
per-file-ignores =
    # __init__ module exports names
    src/emevo/__init__.py: F401
